# api_order

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  catalog.db  docker-compose.yaml  main.py  pyproject.toml
api/: categories.py  nomenclature.py  orders.py
database/: __init__.py  base.py  db_helper.py  models.py
exceptions/: __init__.py  errors.py
repositories/: __init__.py  base.py  category_repository.py  nomenclature_repository.py  order_item_repository.py  order_repository.py
schemas/: __init__.py  category.py  nomenclature.py  order.py
scripts/: init_db.py  seed_test_data.py
services/: __init__.py  category_service.py  nomenclature_service.py  order_service.py
settings/: __init__.py  config.py
sql_schema/: raw_schema.sql  raw_schema_sqlite.sql
tests/: __init__.py  conftest.py  test_category_service.py  test_nomenclature_service.py  test_order_service.py  test_repositories.py
